admin/src/components/routes/PipelineWrapper/Pipeline.css
/* ... */
.fullscreen-transformation__panel-title-text {
	color: var(--sl-color-neutral-700);
	font-size: 15px;
	font-weight: 500;
}

.fullscreen-transformation__panel-sub-title {
	color: var(--sl-color-neutral-600);
	font-size: 12px;
}

.fullscreen-transformation__panel-schema-search {
	position: sticky;
	top: 0;
	z-index: 2;
	background-color: var(--bg-gray);
}

.fullscreen-transformation__panel-schema-search::part(base) {
	border-radius: 0;
	border: 0;
	border-bottom: 1px solid var(--border-primary);
	box-shadow: none !important;
	font-size: 13px;
	height: 40px;
	padding: 0 20px;
	align-items: center;
}

.fullscreen-transformation__panel-schema-show-only-selected {
	display: flex;
	align-items: center;
	width: 100%;
	height: 40px;
	padding: 0px 30px;
	border-bottom: 1px solid var(--border-primary);
	font-size: 12px;
	--thumb-size: 14px;
	position: sticky;
	top: 40px;
	z-index: 2;
	background-color: var(--bg-gray);
}

.fullscreen-transformation__panel-schema-show-only-selected::part(base) {
	gap: 5px;
}

.fullscreen-transformation__panel-schema-show-only-selected::part(label) {
	color: var(--text-primary);
}

.fullscreen-transformation__property-wrapper {
	display: flex;
	align-items: center;
	gap: 5px;
	padding: 8px 10px;
	width: 100%;
	border-bottom: 1px solid var(--border-primary);
	background-color: var(--bg-gray);
	height: 55px;
}

.fullscreen-transformation__property {
	position: relative;
	user-select: none;
	padding-left: var(--property-indentation);
	overflow: hidden;
	flex: 1;
	min-width: 0;
}

.fullscreen-transformation__property-check::part(base) {
	display: flex;
}

.fullscreen-transformation__property-check::part(control) {
	border-color: var(--sl-color-neutral-400);
}

.fullscreen-transformation__property-check-empty {
	width: 21px;
}

.fullscreen-transformation__property-name {
	font-family: var(--monospace-fonts);
	overflow-wrap: anywhere;
	font-size: 13px;
}

.fullscreen-transformation__property-name-text {
	padding-right: 5px;
	font-weight: 500;
}

.fullscreen-transformation__property-head {
	display: grid;
	grid-template-columns: minmax(0, 1fr) auto;
	column-gap: 8px;
	align-items: start;
}

.fullscreen-transformation__property-head-main {
	min-width: 0;
}

.fullscreen-transformation__property-type {
	font-size: 11px;
	margin-right: 5px;
}

.fullscreen-transformation__property-type > * {
	color: var(--sl-color-neutral-600);
}

.fullscreen-transformation__property-language-type {
	justify-self: end;
	margin-right: 2em;
}

.fullscreen-transformation__property-language-type::part(base) {
	font-size: 11px;
	font-family: var(--monospace-fonts);
	white-space: nowrap;
	padding: 4px 8px;
	background-color: #f2f0f4;
	color: #3c3741;
	border-color: transparent;
}

.fullscreen-transformation__property-required {
	opacity: 1;
	color: var(--sl-color-danger-500);
	font-weight: 500;
	font-size: 11px;
	margin-left: 3px;
	transition: color 0.3s;
}

.fullscreen-transformation__property-required--selected {
	color: var(--sl-color-neutral-500);
}

.fullscreen-transformation__property-type span:first-child {
	margin-right: 2px;
	font-family: var(--monospace-fonts);
}

.fullscreen-transformation__property-disabled-info {
	position: relative;
	top: 3px;
}

.fullscreen-transformation__property-padding {
	width: 20px;
	min-width: 20px;
	height: 20px;
	display: flex;
	align-items: center;
	margin-right: 2px;
	position: relative;
}

.fullscreen-transformation__property-caret {
	color: var(--sl-color-neutral-400);
	font-size: 12px;
	cursor: pointer;
	width: 24px;
	height: 28px;
	margin-right: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	border-radius: 3px;
	position: absolute;
	left: -4px;
	transition: background-color 0.2s;
}

.fullscreen-transformation__property-caret:hover {
	background-color: var(--sl-color-neutral-100);
}

.fullscreen-transformation__property-caret::part(svg) {
	width: 13px;
	height: 13px;
	transition: transform 0.3s;
}

.fullscreen-transformation__property-required-icon {
	color: var(--sl-color-danger-500);
	font-size: 9px;
	margin-right: 5px;
}

.fullscreen-transformation__property-identifier-icon {
	color: var(--sl-color-neutral-500);
	font-size: 17px;
	position: relative;
	top: 3px;
	margin-right: 1px;
}

.fullscreen-transformation__property-description {
	color: var(--sl-color-neutral-600);
	font-size: 12px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	line-height: 1.8;
}

.fullscreen-transformation__property-wrapper--is-out-matching > sl-checkbox {
	opacity: 0.8;
}

.fullscreen-transformation__property-wrapper--is-out-matching .fullscreen-transformation__property-identifier-icon,
.fullscreen-transformation__property-wrapper--is-out-matching .fullscreen-transformation__property-name-text,
.fullscreen-transformation__property-wrapper--is-out-matching .fullscreen-transformation__property-type,
.fullscreen-transformation__property-wrapper--is-out-matching .fullscreen-transformation__property-language-type,
.fullscreen-transformation__property-wrapper--is-out-matching .fullscreen-transformation__property-disabled-info,
.fullscreen-transformation__property-wrapper--is-out-matching .fullscreen-transformation__property-description {
	opacity: 0.6;
}

.fullscreen-transformation__property-wrapper--is-out-matching.fullscreen-transformation__property-wrapper--selected
	> sl-checkbox,
.fullscreen-transformation__property-wrapper--is-out-matching.fullscreen-transformation__property-wrapper--selected
	.fullscreen-transformation__property-name
	* {
	opacity: 1;
}

.fullscreen-transformation__property-wrapper--is-out-matching.fullscreen-transformation__property-wrapper--selected {
	align-items: start;
}

.fullscreen-transformation__property-wrapper--is-out-matching.fullscreen-transformation__property-wrapper--selected
	> sl-checkbox {
	position: relative;
	top: 5px;
}

.fullscreen-transformation__property-error {
	font-size: 11px;
	color: var(--sl-color-danger-500);
}
/* ... */

